# G13

./: .clang-format  CMakeLists.txt  README.md  runbuild.sh
apps/: CMakeLists.txt  cacheassociativity.cpp  cacheassociativity.metal  cacheline.cpp  cacheline.metal  cachesize.cpp  cachesize.metal  localmem.cpp  localmem.metal  sharedmem.cpp  sharedmem.metal
apps/cache/: cache.cpp  cache.metal  cacheline.cpp  cacheline.metal
apps/l1-cache/: l1Cache.cpp  l1Cache.metal
src/: indices.hh  measure.hh
